# mcstatus-fastapi

./: Containerfile  README.md  pyproject.toml
.github/workflows/: docker-image.yml
app/: main.py
app/core/: config.py  minecraft.py
